fix duplication of images in dark mode

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -20,9 +20,11 @@
   overflow: hidden;
 }
 
-html:not(.dark) .vp-doc img[src$='#dark']{
+html:not(.dark) .vp-doc img[src$='#dark'] {
   display: none;
 }
+
+.light .vp-doc img[src$='#dark'] {
   display: none;
 }
 
